--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,12 +3,19 @@ spring.application.name=sb-ecom
 #spring.h2.console.enabled=true
 #spring.datasource.url=jdbc:h2:mem:test
 
-spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
-spring.datasource.username=root
+#spring.datasource.url=jdbc:mysql://localhost:3306/ecommerce
+#spring.datasource.username=root
+#spring.datasource.password=Nishanth
+
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+
+spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
+spring.datasource.username=postgres
 spring.datasource.password=Nishanth
 
 spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 project.image=images/
 
@@ -20,9 +27,7 @@ spring.app.jwtSecret=mySecretKey123912738aopsgjnspkmndfsopkvajoirjg94gf2opfng2mo
 spring.app.jwtExpirationMs=3000000
 spring.ecom.app.jwtCookieName=springBootEcom
 
-
-
-logging.level.org.springframework=DEBUG
-logging.level.org.hibernate.SQL=DEBUG
-logging.level.org.springframework.security=DEBUG
-logging.level.com.ecommerce.project=DEBUG
+#logging.level.org.springframework=DEBUG
+#logging.level.org.hibernate.SQL=DEBUG
+#logging.level.org.springframework.security=DEBUG
+#logging.level.com.ecommerce.project=DEBUG
