--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ spring.application.name=sb-ecom
 #spring.jpa.hibernate.ddl-auto=update
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/ecommerce
+spring.datasource.url=jdbc:postgresql://ecommerce.ct0eig0qsjfz.eu-north-1.rds.amazonaws.com:5432/ecommerce
 spring.datasource.username=postgres
 spring.datasource.password=Nishanth
 
@@ -31,3 +31,6 @@ spring.ecom.app.jwtCookieName=springBootEcom
 #logging.level.org.hibernate.SQL=DEBUG
 #logging.level.org.springframework.security=DEBUG
 #logging.level.com.ecommerce.project=DEBUG
+
+# for elastic bean stakl
+server.port=5000
